--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,34 @@
 
+{% load staticfiles %}
 <html>
-    <head>
-        <title>Django Girls blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Büşranın ilk blogu</a></h1>
-        </div>
-        <div>
-            <p>yayın tarihi: 14.06.2014, 12:14</p>
-            <h2><a href="">İlk Gönderişim</a></h2>
-            <p>Gönderi göndermek çok güzel bir duygudur. </p>
-        </div>
 
-        <div>
-            <p>published: ne farkeder ki</p>
-            <h2><a href="">İkinci gönderişim</a></h2>
-            <p>Bakın bakın! Ben hala bir şeyler gönderebiliyorum.</p>
+<head>
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="{% static 'css/blog.css' %}">
+<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+<div class="page-header">
+    <h1><a href="/">Django Girls Blog</a></h1>
+</div>
+
+<div class="content container">
+    <div class="row">
+        <div class="col-md-8">
+            {% for post in posts %}
+                <div class="post">
+                    <div class="date">
+                        <p>published: {{ post.published_date }}</p>
+                    </div>
+                    <h1><a href="">{{ post.title }}</a></h1>
+                    <p>{{ post.text|linebreaksbr }}</p>
+                </div>
+            {% endfor %}
         </div>
-    </body>
+    </div>
+</div>
+
+</body>
 </html>
